--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -11,5 +11,8 @@
 <script src="__PUBLIC__/js/jquery.validate.js"></script>
 <script src="__PUBLIC__/js/jquery.form.js"></script>
 <script src="__PUBLIC__/js/common.js"></script>
+<script>
+var PUBLIC_URL="__PUBLIC__";
+</script>
 </head>
 <body>
