店铺资料修改

--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -12,6 +12,8 @@
 <script src="__PUBLIC__/js/jquery.form.js"></script>
 <script src="__PUBLIC__/js/common.js"></script>
 <script>
+var SITE_URL="{:C('SITE_URL')}";
+var REAL_SITE_URL="{:C('REAL_SITE_URL')}";
 var PUBLIC_URL="__PUBLIC__";
 </script>
 </head>
