--- a/Application/Admin/View/Setting/base_information.html
+++ b/Application/Admin/View/Setting/base_information.html
@@ -45,7 +45,7 @@
                         <input type="file" id="site_logo" tabIndex="-1">
                 </span>
                 <input type="hidden" name="site_logo" value="{$setting.site_logo}"/>
-                <span class="setting-logo"><img src="{$setting.site_logo}"></span>
+                <span class="setting-logo"><notempty name="setting.site_logo"><img src="{$setting.site_logo}"></notempty></span>
             </div>
         </div>
         <div class="form-group">
