--- a/Application/Admin/View/Payment/index.html
+++ b/Application/Admin/View/Payment/index.html
@@ -1,34 +1,29 @@
 <include file="Public:header"/>
 <div class="container-fluid">
-
+    <div class="row right-top">支付方式管理</div>
 </div>
 <div class="container-fluid">
-    <empty name="lists">
+    <empty name="payments">
         没有符合条件的记录
     <else />
     <table class="table table-hover">
+        <volist name="payments" id="lst">
         <tr>
-            <th><input type="checkbox" onclick="$('input[class=\'checkitem\']').prop('checked',this.checked)" /></th>
-            <th><span fieldname="cate_name" ectype="order_by">分类名称</span></th>
-            <th>排序</th>
-            <th class="text-right">操作</th>
-        </tr>
-        <volist name="lists" id="lst">
-        <tr>
-            <td><input class="checkitem" type="checkbox" value="{$lst.cate_id}" /></td>
-            <td><i class="glyphicon glyphicon-plus" status="open" ectype="flex"></i><span title="可编辑" class="editable glyphicon" required="1" fieldid="{$lst.cate_id}" fieldname="cate_name" ectype="inline_edit" style="display:inline;">{$lst.cate_name}</span></td>
-            <td><span title="可编辑" class="editable glyphicon" required="1" fieldid="{$lst.cate_id}" fieldname="sort_order" ectype="inline_edit" style="display:inline;">{$lst.sort_order}</span></td>
+            <td>{$lst.name}</td>
+            <td>{$lst.desc}</td>
+            <td><notempty name="lst.system_enabled">是<else/>否</notempty></td>
+            <td>{$lst.currency}</td>
+            <td><a href="{$lst.website}" title="{$lst.website}" target="_blank">{$lst.author}</a></td>
+            <td>{$lst.version}</td>
             <td class="text-right">
-                <a href="{:U('scategory/edit',array('id'=>$lst['cate_id']))}">编辑</a> |
-                <a href="#">删除</a> |
-                <a href="{:U('scategory/add',array('pid'=>$lst['cate_id']))}">新增下级</a>
+                <empty name="lst.system_enabled">
+                <a href="{:U('payment/enable',array('code'=>$lst['code']))}">启用</a>
+                <else/>
+                <a href="javascript:if(confirm('您确定要禁用它吗？'))window.location='{:U('payment/disable',array('code'=>$lst['code']))}'">禁用</a>
+                </empty>
             </td>
         </tr>
         </volist>
-        <tr><td colspan="4" id="batchAction">
-            <button class="btn btn-xs btn-primary batchButton" type="button">删除</button>
-        </td>
-        </tr>
     </table>
     </empty>
 </div>
